fix: TrainingService